--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
   "name": "whiteboard",
   "version": "0.0.1",
+  "author": "thomasLevans",
+  "license": "GPL-3.0",
   "description": "A whiteboard component built with D3",
+  "homepage": "https://github.com/thomasLevans/whiteboard#readme",
   "main": "src/index.js",
-  "dependencies": {},
-  "devDependencies": {
-    "babel-core": "^6.7.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "chai": "^3.5.0",
-    "chai-deep-match": "^1.0.2",
-    "eslint": "^2.7.0",
-    "mocha": "^2.4.5",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+  "bugs": {
+    "url": "https://github.com/thomasLevans/whiteboard/issues"
   },
   "scripts": {
     "test": "mocha",
@@ -26,10 +20,25 @@
     "type": "git",
     "url": "git+https://github.com/thomasLevans/whiteboard.git"
   },
-  "author": "thomasLevans",
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/thomasLevans/whiteboard/issues"
+  "dependencies": {
+    "bootstrap": "^3.3.6",
+    "d3": "^3.5.16",
+    "jquery": "^2.2.3"
   },
-  "homepage": "https://github.com/thomasLevans/whiteboard#readme"
+  "devDependencies": {
+    "babel-core": "^6.7.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "chai": "^3.5.0",
+    "chai-deep-match": "^1.0.2",
+    "eslint": "^2.7.0",
+    "mocha": "^2.4.5",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  }
 }
