--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "d3": "^3.5.16",
-    "jquery": "^2.2.3"
+    "jquery": "^2.2.3",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.7.4",
@@ -32,6 +33,7 @@
     "chai": "^3.5.0",
     "chai-deep-match": "^1.0.2",
     "eslint": "^2.7.0",
+    "jsdom": "^8.3.0",
     "mocha": "^2.4.5",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
